# otus-gpt

./: .gitignore  Makefile  README.md  pyproject.toml
src/phoebot/: LM_client.py  config.py  main.py
